add endpoint confirm password reset
